fixed bug where dropdown disappers if there is a div behind it

--- a/src/components/NavBarMenu/NavBarMenu.css
+++ b/src/components/NavBarMenu/NavBarMenu.css
@@ -48,6 +48,7 @@ a {
         display: flex;
         padding: 0;
         margin: 0;
+        z-index: 9999;
     }
 
     .mobile-menu li {
