--- a/src/components/NavBarMenu/NavBarMenuItem/NavBarMenuItem.css
+++ b/src/components/NavBarMenu/NavBarMenuItem/NavBarMenuItem.css
@@ -10,7 +10,9 @@
     width: 100%;
     background-color: #333;
     padding: 15px;
-    top: 100%
+    top: 100%;
+    z-index: 1000;
+
 }
 
 .active {
